--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -824,6 +824,16 @@
 
             &.modifier {
                 background-color: $color-red;
+                font-family: 'Inter';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 13px;
+                line-height: 13px;
+                @media screen and (min-width:745px) {
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 18px;
+                }
             }
         }
     }
@@ -883,11 +893,11 @@
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
-            line-height: 18px;
+            line-height: 18.2px;
 
             @media screen and (min-width:745px) {
                 font-size: 14px;
-                line-height: 18px;
+                line-height: 18.2px;
                 max-width: 538px;
                 margin-left: 46px;
                 margin-top: 1.5rem;
