feat: :construction: Change content in Home to Figma v4
Change content in Home to Figma v4

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,7 @@ import ALPDVideo from "../components/ALPDVideo.astro";
   <section class="section section__home-video" id="alpd-video">
     <div class="wrapper">
       <h2 class="section__home-video-title">
-        Step into a detective’s shoes and solve the casE of hypophosphatasia
-        (HPP)
+        Step into a detective’s shoes and solve the casE of hypophosphatasia (HPP)
       </h2>
     </div>
     <ALPDVideo />
@@ -21,13 +20,11 @@ import ALPDVideo from "../components/ALPDVideo.astro";
 
     <div class="case-file__first">
       <CaseFile imgSrc="alp-academy-2" imgAlt="alpd file" link="/alpd-academy/">
-        Study the role of alkaline phosphatase and the dangers associated with
-        low activity.
+        Study the role of alkaline phosphatase and the dangers associated with low activity.
       </CaseFile>
 
       <CaseFile imgSrc="hpp-profile-2" imgAlt="hpp folder" link="/hpp-profile/">
-        View the rap sheet on hypophosphatasia and the harm it may be causing
-        your patients.
+        View the rap sheet on hypophosphatasia and the harm it may be causing your patients.
       </CaseFile>
     </div>
 
@@ -36,20 +33,16 @@ import ALPDVideo from "../components/ALPDVideo.astro";
         imgSrc="usual-suspect-folder-2"
         imgAlt="usual suspect folder"
         link="/usual-suspects/"
-        className="modifier"
       >
-        Keep your eyes peeled for common misdiagnoses and risks associated with
-        them.
+        Keep your eyes peeled for common misdiagnoses and risks associated with them.
       </CaseFile>
 
       <CaseFile
         imgSrc="identifying-hpp-2"
         imgAlt="identifying suspect folder"
-        className="custom-class"
         link="/identifying-hpp/"
       >
-        Get the drop on identifying hypophosphatasia and the tests that can help
-        point you in the right direction. 
+        Get the drop on identifying hypophosphatasia and the tests that can help point you in the right direction.
       </CaseFile>
     </div>
 
