style: :lipstick: Adjust styles for video title in Home
Adjust max-width and margin-bottom for video title in Home

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,7 +36,6 @@
 @import './components/stay-connected.scss';
 @import './components/_skeleton.scss';
 @import './components/_usual-supect-modal.scss';
-@import './components/_usual-modal-grids.scss';
 
 
 .section__home-video {
@@ -46,9 +45,13 @@
         text-transform: uppercase;
         color: $color-cinnabar;
         text-align: center;
-        max-width: 780px;
+        max-width: 28ch;
         margin: auto;
-        margin-bottom: 2.5rem;
+        margin-bottom: 1.25rem;
+
+        @include media('tablet') {
+            max-width: 34ch;
+        }
     }
 }
 
