Update CTA links on HPP Profile & ALP pages.

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -498,7 +498,7 @@ const internalNavLinks = [
 
     <CTA
       buttonLabel="HPP Profile"
-      linkURL="#"
+      linkURL="/hpp-profile/"
       content="Read the full file on hypophosphatasia"
     />
     <References>
