--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -1083,7 +1083,7 @@ const internalNavLinks = [
           variation="variant-2"
           buttonLabel="Usual Suspects"
           content="Learn the risk of misdiagnosis"
-          linkURL="#"
+          linkURL="/usual-suspects/"
           bypassModal
         />
       </section>
