--- a/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
@@ -1,5 +1,5 @@
 ---
-import References from '../../References.astro';
+import References from "../../References.astro";
 import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
 ---
 
@@ -35,7 +35,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
         <div class="middle">
           <ul>
             <li>Reduced bone density</li>
-            <li>Deficient ossification of skull vault</li>
+            <li>Deficient ossification of skull <br /> vault</li>
             <li>Bowed long bones</li>
             <li>Fractures</li>
             <li>Gracile ribs</li>
@@ -73,10 +73,10 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
         </div>
         <div class="middle">
           <ul>
-            <li>Shortening, bowing, and angulation of the long bones</li>
+            <li>Shortening, bowing, and <br /> angulation of the long bones</li>
             <li>Diaphyseal spurs</li>
             <li>Tibial dimple</li>
-            <li>Absent ossification of pedicles</li>
+            <li>Absent ossification of <br /> pedicles</li>
             <li>Hypoplastic fibula</li>
           </ul>
         </div>
@@ -128,10 +128,10 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
         </div>
         <div class="middle">
           <ul>
-            <li>Development of bone deformities</li>
+            <li>Development of bone <br /> deformities</li>
             <li>Failure of bone mineralization</li>
             <li>Bowed legs</li>
-            <li>Delay in gross motor milestones</li>
+            <li>Delay in gross motor <br /> milestones</li>
           </ul>
         </div>
         <div class="right">
@@ -141,9 +141,12 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               phosphatase is high in rickets)
             </li>
             <li>
-              Test for vitamin B6, calcium, vitamin D, and parathyroid hormone
+              Test for vitamin B<sub>6</sub>, calcium, vitamin D, and
+              parathyroid hormone
               <ul>
-                <li>Patients may have normal vitamin B6 and urine PEA</li>
+                <li>
+                  Patients may have normal vitamin B<sub>6</sub> and urine PEA
+                </li>
               </ul>
             </li>
             <li>Clinical history and physical exam</li>
@@ -176,9 +179,12 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               phosphatase may be low in severe patients)
             </li>
             <li>
-              Test for vitamin B6, calcium, vitamin D, and parathyroid hormone
+              Test for vitamin B<sub>6</sub>, calcium, vitamin D, and
+              parathyroid hormone
             </li>
-            <li>Patients may have normal vitamin B6 and urine PEA</li>
+            <li>
+              Patients may have normal vitamin B<sub>6</sub> and urine PEA
+            </li>
             <li>Radiographs may help distinguish from hypophosphatasia</li>
             <li>Clinical history and physical exam</li>
           </ul>
@@ -204,9 +210,12 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               phosphatase is normal in idiopathic juvenile osteoporosis)
             </li>
             <li>
-              Test for vitamin B6, calcium, vitamin D, and parathyroid hormone
+              Test for vitamin B<sub>6</sub>, calcium, vitamin D, and
+              parathyroid hormone
               <ul>
-                <li>Patients may have normal vitamin B6 and urine PEA</li>
+                <li>
+                  Patients may have normal vitamin B<sub>6</sub> and urine PEA
+                </li>
               </ul>
             </li>
             <li>Radiographs may help distinguish from hypophosphatasia</li>
@@ -236,9 +245,12 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               phosphatase is high in XLH)
             </li>
             <li>
-              Test for vitamin B6, calcium, vitamin D, and parathyroid hormone
+              Test for vitamin B<sub>6</sub>, calcium, vitamin D, and
+              parathyroid hormone
             </li>
-            <li>Patients may have normal vitamin B6 and urine PEA</li>
+            <li>
+              Patients may have normal vitamin B<sub>6</sub> and urine PEA
+            </li>
             <li>Clinical history and physical exam</li>
           </ul>
         </div>
