Fix links on reference section

--- a/src/styles/components/_usual-supect-modal.scss
+++ b/src/styles/components/_usual-supect-modal.scss
@@ -106,6 +106,7 @@
                         a {
                             color: $color-black;
                             font-weight: 400;
+                            word-break: break-all;
                         }
                     }
                 }
