Add dragToFalse option to modal

--- a/src/components/usual-suspects/modals/ModalMobile.astro
+++ b/src/components/usual-suspects/modals/ModalMobile.astro
@@ -34,6 +34,7 @@ import ModalAdultsMobile from "./ModalAdultsMobile.astro";
           trapFocus: false,
           closeButton: false,
           height: "auto",
+          dragToClose: false,
         }
       );
     }
