--- a/src/components/usual-suspects/modals/ModalAdultsMobile.astro
+++ b/src/components/usual-suspects/modals/ModalAdultsMobile.astro
@@ -35,7 +35,7 @@ import Accordion from "../../Accordion.astro";
             <li>Gracile ribs</li>
             <li>Narrow thorax</li>
             <li>Metaphyseal flaring</li>
-            <li>Tooth loss</li>
+            <li>Brittle teeth</li>
           </ul>
 
           <h5 class="usual-suspect__acc--title">
@@ -125,7 +125,7 @@ import Accordion from "../../Accordion.astro";
             <li>
               Genetic testing may help support a hypophosphatasia diagnosis, but
               a hypophosphatasia diagnosis cannot be excluded by not finding an
-              ALPL mutation
+              <em>ALPL</em> mutation
             </li>
           </ul>
         </Accordion>
