feat: :art: Update content and format to v4
- An assets was changed, - Some styles to give format, - Minimal changes in the text

--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -534,9 +534,10 @@
 
             img {
               position: relative;
-              top: -1.85rem;
+              top: -1.80rem;
               margin: 0 auto;
               width: 225px;
+              transform: rotate(4deg);
 
               &.photo-of-Anna {
                 top: -1.05rem;
