style: :construction: Change layout for description in first 'Know the numbers' section
Change layout for description of first div with number__kpi class in 'Know the numbers' section

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -354,12 +354,10 @@ const internalNavLinks = [
               &#60;40 U/L <sup class="symbol-sup">*</sup>
             </p>
           </div>
+          <p class="number__kpi-description color--saffron-mango">
+            is considered LOW in <span class="color--buff">adults</span>
+          </p>
           <p class="number__kpi-description">
-            <span class="color--saffron-mango"
-              >is considered LOW in <span class="color--buff">adults</span
-              ></span
-            >
-            <br /><br />
             <sup>*</sup>Limitations: An alkaline phosphatase level of below 40 U/L is not conclusive for a diagnosis of hypophosphatasia. Patient should be evaluated for other symptoms of hypophosphatasia and differential diagnoses should be ruled out. Check with your lab for their appropriate age- and sex-adjusted reference ranges.<sup>20-24</sup>
           </p>
         </div>
