--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -112,13 +112,12 @@
         width: calc(100vw + 31.25rem);
         height: 0.5rem;
         z-index: 1;
-
         bottom: .25rem;
         right: 50%;
-        transform: translateX(50%) rotate(12deg);
+        transform: translateX(-50%) rotate(12deg);
 
         @media screen and (min-width: 768px) {
-            transform: translateX(50%) rotate(-12deg);
+            transform: translateX(-50%) rotate(-12deg);
         }
     }
 
@@ -150,6 +149,9 @@
         @media screen and (min-width: 768px) {
             font-size: 1.375rem;
             line-height: 30.8px;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 36ch;
         }
     }
 
@@ -161,6 +163,9 @@
         @media screen and (min-width: 768px) {
             font-size: 1.125rem;
             line-height: 25.2px;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 51ch;
         }
     }
 
@@ -181,8 +186,8 @@
             max-width: 90rem;
             margin-left: auto;
             margin-right: auto;
-
-            padding-top: 5rem;
+            padding-top: 6.5625rem;
+            padding-bottom: 7rem;
         }
 
         figcaption,
@@ -192,11 +197,15 @@
             text-align: center;
             margin-top: 2rem;
             margin-bottom: 2rem;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 37ch;
 
             @media screen and (min-width: 1024px) {
                 margin-top: 0;
-                margin-bottom: 0;
+                margin-bottom: 1.5rem;
                 text-align: left;
+                max-width: 100%;
             }
         }
 
@@ -226,7 +235,7 @@
             }
 
             @media screen and (min-width: 1366px) {
-                max-width: 68.5rem;
+                max-width: 61.5rem;
                 padding-bottom: 2.8937rem;
                 transform: translate(5.5rem, .625rem);
             }
@@ -293,6 +302,7 @@
             @media screen and (min-width: 1024px) {
                 font-size: 1.375rem;
                 line-height: 30.8px;
+                margin-bottom: .625rem;
             }
         }
 
@@ -318,6 +328,7 @@
                 &--compact {
                     max-width: 48.125rem;
                     margin: auto;
+                    margin-bottom: 4.4375rem !important;
                 }
             }
         }
@@ -413,6 +424,7 @@
 
         li {
             color: $color-white;
+            font-size: .875rem;
             line-height: 18.2px;
             position: relative;
             transform: translateX(.375rem);
@@ -490,12 +502,12 @@
             width: 42.875rem;
             margin-left: auto;
             margin-right: auto;
-
+            margin-top: .625rem;
             text-align: center;
 
             &.last {
                 .alpd-academy__deficient-paragraph-title {
-                    width: 21.875rem;
+                    width: 34ch;
                     margin-left: auto;
                     margin-right: auto;
                 }
@@ -505,15 +517,19 @@
                     margin-right: auto;
 
                     &:first-of-type {
-                        width: 31.25rem;
+                        width: 48ch;
                     }
 
                     &:last-of-type {
-                        width: 32.25rem;
+                        width: 57ch;
                         margin-bottom: 2rem;
                     }
                 }
             }
+        }
+
+        .alpd-academy__symptoms-list {
+            margin-bottom: 2rem;
         }
     }
 
@@ -536,6 +552,9 @@
 
         @media screen and (min-width: 768px) {
             font-weight: 500;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 50ch;
         }
     }
 
@@ -704,6 +723,7 @@
 .alpd-academy__persistently-low-alp-container {
     position: relative;
     margin-bottom: 3rem;
+    padding: 2rem 0 4rem;
 
     @media screen and (min-width: 850px) {
         max-width: 47.3125rem;
@@ -735,8 +755,6 @@
             width: 100%;
         }
     }
-
-    padding: 2rem 0;
 
     .persistently-low-red-string {
         position: absolute;
@@ -785,6 +803,12 @@
             }
         }
     }
+
+    .font--special-elite {
+        @media screen and (min-width: 1024px) {
+            text-align: center;
+        }
+    }
 }
 
 .alpd-academy__know-the-numbers {
@@ -829,7 +853,30 @@
                 margin-bottom: 3rem;
 
                 .number__kpi-description {
-                    margin-top: -1.75rem;
+                    text-align: left;
+
+                    &.color--saffron-mango {
+                        line-height: 1.5rem;
+                        margin-bottom: 1.25rem;
+                        margin-top: -1.75rem;
+                        text-align: center;
+                    }
+
+                    &:not(.color--saffron-mango) {
+                        font-size: .875rem;
+                        line-height: 1.3125rem;
+                        margin-left: auto;
+                        margin-right: auto;
+                        max-width: 42ch;
+
+                        @media screen and (min-width: 1024px) {
+                            max-width: 41ch;
+                        }
+                    }
+
+                    @media screen and (min-width: 1024px) {
+                        text-align: center;
+                    }
                 }
             }
 
@@ -844,6 +891,11 @@
                 font-weight: 600;
                 font-size: 1.125rem;
                 line-height: 25.2px;
+
+                @media screen and (min-width: 1024px) {
+                    font-size: 1.5rem;
+                    line-height: 2.125rem;
+                }
             }
 
             .number__kpi-data {
@@ -862,14 +914,25 @@
                 font-weight: 400;
                 font-size: 4.5rem;
                 color: $color-red;
+
+                @media screen and (min-width: 1024px) {
+                    font-size: 5.125rem;
+                    line-height: 6.375rem;
+                }
             }
 
             .number__kpi-description {
                 color: $color-white;
+                text-align: left;
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 35ch;
 
                 &.right--column {
                     @media screen and (min-width: 1024px) {
                         margin-top: -1.75rem;
+                        max-width: 34ch;
+                        text-align: center;
                     }
                 }
             }
@@ -909,6 +972,7 @@
             max-width: 80rem;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 4.375rem;
         }
 
         &::before {
@@ -973,6 +1037,10 @@
                 margin-bottom: 1rem;
             }
         }
+
+        .chart {
+            margin-bottom: 1.0625rem;
+        }
     }
 }
 
@@ -988,6 +1056,10 @@
         picture {
             display: none;
         }
+    }
+
+    @media screen and (min-width: 1024px) {
+        margin-bottom: 0;
     }
 
     .red-string {
@@ -1034,7 +1106,7 @@
     .hypophosphatasia-info__content {
         position: relative;
         z-index: 3;
-        padding-top: 8rem;
+        padding-top: 10rem;
         padding-bottom: 5rem;
         height: 100%;
 
@@ -1068,6 +1140,10 @@
                     margin-bottom: 3rem;
 
                     font-family: Barlow, Arial, Helvetica, sans-serif;
+                }
+
+                @media screen and (min-width: 1024px) {
+                    margin-bottom: 3.75rem;
                 }
             }
         }
