--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -346,6 +346,10 @@
             text-align: center;
             max-width: 35.625rem;
         }
+
+        @media screen and (min-width: 1024px) {
+            max-width: 37.8125rem;
+        }
     }
 
     figcaption {
@@ -371,6 +375,12 @@
         line-height: 25.2px;
         font-weight: 500;
         margin-bottom: 1.5rem;
+
+        @media screen and (min-width: 1024px) {
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 56ch;
+        }
     }
 
     .alpd-academy__mutations-table {
@@ -521,10 +531,12 @@
 
                     &:first-of-type {
                         width: 48ch;
+                        max-width: 48ch;
                     }
 
                     &:last-of-type {
                         width: 57ch;
+                        max-width: 57ch;
                         margin-bottom: 2rem;
                     }
                 }
