usual suspect page cpntent updated

--- a/src/pages/usual-suspects-2.astro
+++ b/src/pages/usual-suspects-2.astro
@@ -54,7 +54,7 @@ import References from "../components/References.astro";
                 years and may have detrimental effects on a patient's condition
                 if a wrongful diagnosis is made. Make sure to rule out
                 hypophosphatasia before starting patients on bisphosphonates.<sup
-                  >20</sup
+                  >16</sup
                 ></strong
               >
             </p>
@@ -70,7 +70,7 @@ import References from "../components/References.astro";
               <li>
                 Bisphosphonates may directly or indirectly worsen
                 hypophosphatasia by binding zinc or magnesium, compromising
-                alkaline phosphatase activity19,21,22
+                alkaline phosphatase activity<sup>19,21,22</sup>
               </li>
               <li>
                 Possible increased risk of fracture at growth plate<sup
@@ -145,7 +145,7 @@ import References from "../components/References.astro";
                 <ul class="misdiagnosis-list">
                   <li>
                     Bisphosphonates are commonly used in adult patients with
-                    osteoporosis<sup>19</sup>
+                    osteoporosis<sup>15</sup>
                   </li>
                 </ul>
               </td>
@@ -167,27 +167,23 @@ import References from "../components/References.astro";
                     conformation to inorganic pyrophosphate (PPi), with the
                     accumulation of PPi associated with skeletal and systemic
                     symptoms seen in hypophosphatasia, which may result in a
-                    worsening of presenting symptoms<sup>19,21,22</sup>
+                    worsening of presenting symptoms<sup>15,17,18</sup>
                   </li>
                   <li>
                     Bisphosphonates may directly or indirectly worsen
                     hypophosphatasia by binding zinc or magnesium, compromising
-                    alkaline phosphatase activity19,21,22
+                    alkaline phosphatase activity<sup>15,17,18</sup>
                   </li>
                   <li>
-                    Possible increased risk of fracture at growth plate<sup
-                      >19,21,22</sup
-                    >
+                    Possible increased risk of fracture at growth plate<sup>15,17,18</sup>
                   </li>
                   <li>
-                    Increased risk of atypical femoral fractures in adults<sup
-                      >19,21,22</sup
-                    >
+                    Increased risk of atypical femoral fractures in adults<sup>15,17,18</sup>
                   </li>
                   <li>
                     Excessively high doses have led to osteopetrosis and
                     persistent remodeling defects, persisting more than 6 years
-                    after discontinuation<sup>19,21,22</sup>
+                    after discontinuation<sup>15,17,18</sup>
                   </li>
                 </ul>
               </td>
@@ -206,20 +202,20 @@ import References from "../components/References.astro";
                   <li>
                     Vitamin D and calcium supplementation can be used for a
                     myriad of conditions, ranging from rickets to depression, in
-                    adults, children, and infants<sup>7,21,23</sup>
+                    adults, children, and infants<sup>10,14,17</sup>
                   </li>
                 </ul>
               </td>
               <td colspan="3">
                 <ul class="misdiagnosis-list">
                   <li>
-                    Hypercalcemia<sup>7,21,23</sup>
+                    Hypercalcemia<sup>10,14,17</sup>
                   </li>
                   <li>
-                    Hypercalciuria<sup>7,21,23</sup>
+                    Hypercalciuria<sup>10,14,17</sup>
                   </li>
                   <li>
-                    Kidney stones<sup>7,21,23</sup>
+                    Kidney stones<sup>10,14,17</sup>
                   </li>
                 </ul>
               </td>
