--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -71,11 +71,7 @@ const internalNavLinks = [
         <div class="wrapper">
             <h2 class="title">A misdiagnosis can do damage</h2>
             <p class="pharagraph">
-                Misdiagnosis of a patient with hypophosphatasia is common and
-                can lead to ineffective management that can compound the
-                clinical picture and worsen hypophosphatasia. Certain therapies
-                used for other disorders can interfere with or dramatically
-                worsen hypophosphatasia.<sup>4,5,7,15-17</sup>
+                Misdiagnosis of a patient with hypophosphatasia is common and can lead to ineffective management that can compound the clinical picture and worsen hypophosphatasia. Certain therapies used for other disorders can interfere with or dramatically worsen hypophosphatasia.<sup>4,5,11-14</sup>
             </p>
             <div class="red-string-wrapper">
                 <div class="red-string"></div>
@@ -85,7 +81,7 @@ const internalNavLinks = [
                     >rule out hypophosphatasia</span
                 > before starting patients on bisphosphonates or some commonly used
                 supplements that may end up causing your patients harm<sup
-                    >4,5,7</sup
+                    >4,5,14</sup
                 >
             </p>
             <div class="red-string-wrapper">
@@ -145,7 +141,7 @@ const internalNavLinks = [
                                     a patient's condition if a wrongful
                                     diagnosis is made. Make sure to rule out
                                     hypophosphatasia before starting patients on
-                                    bisphosphonates.<sup>20</sup></strong
+                                    bisphosphonates.<sup>20</sup></strong 
                                 >
                             </p>
 
@@ -164,7 +160,7 @@ const internalNavLinks = [
                                     Bisphosphonates may directly or indirectly
                                     worsen hypophosphatasia by binding zinc or
                                     magnesium, compromising alkaline phosphatase
-                                    activity19,21,22
+                                    activity<sup>19,21,22</sup>
                                 </li>
                                 <li>
                                     Possible increased risk of fracture at
@@ -284,7 +280,7 @@ const internalNavLinks = [
                                             indirectly worsen hypophosphatasia
                                             by binding zinc or magnesium,
                                             compromising alkaline phosphatase
-                                            activity19,21,22
+                                            activity<sup>19,21,22</sup>
                                         </li>
                                         <li>
                                             Possible increased risk of fracture
@@ -324,7 +320,7 @@ const internalNavLinks = [
                                             myriad of conditions, ranging from
                                             rickets to depression, in adults,
                                             children, and infants<sup
-                                                >7,21,23</sup
+                                                >18,21,23</sup
                                             >
                                         </li>
                                     </ul>
@@ -332,13 +328,13 @@ const internalNavLinks = [
                                 <td colspan="3">
                                     <ul class="misdiagnosis-list">
                                         <li>
-                                            Hypercalcemia<sup>7,21,23</sup>
+                                            Hypercalcemia<sup>18,21,23</sup>
                                         </li>
                                         <li>
-                                            Hypercalciuria<sup>7,21,23</sup>
+                                            Hypercalciuria<sup>18,21,23</sup>
                                         </li>
                                         <li>
-                                            Kidney stones<sup>7,21,23</sup>
+                                            Kidney stones<sup>18,21,23</sup>
                                         </li>
                                     </ul>
                                 </td>
