--- a/src/styles/components/_usual-suspects.scss
+++ b/src/styles/components/_usual-suspects.scss
@@ -246,6 +246,7 @@
                 font-family: 'Oswald', sans-serif;
                 font-weight: 700;
                 line-height: 33px;
+                text-transform: math-auto;
             }
 
             &--mobile {
