Add usual modal grid styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -38,6 +38,7 @@
 @import './components/usual-suspects';
 @import './components/_skeleton.scss';
 @import './components/_usual-supect-modal.scss';
+@import './components/_usual-modal-grids.scss';
 
 
 .section__home-video {
