--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3792,6 +3792,12 @@
                 @media screen and (min-width: 769px) {
                     margin-left: 1rem;
                 }
+
+                @media screen and (min-width: 1024px) {
+                    .button--custom-bg {
+                        padding-top: 1.25rem;
+                    }
+                }
             }
         }
 
