--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -120,7 +120,8 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                       role="tab"
                       id="tab-link-table-2"
                       class="modal__inner_tab_link"
-                      tabindex="-1">6 months ago</a>
+                      tabindex="-1">6 months ago</a
+                    >
                   </li>
                   <li role="presentation">
                     <a
@@ -233,8 +234,8 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                   High vitamin B<sub>6</sub> level shown at test 6 months ago
                 </li>
                 <li class="item">
-                  ALPL genetic test: Variant of uncertain <br /> significance (VUS)
-                  identified
+                  <em>ALPL</em> genetic test: Variant of uncertain <br /> significance
+                  (VUS) identified
                 </li>
               </ul>
               <div class="thumbnails">
@@ -255,7 +256,9 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                       />
                     </picture>
                     <div class="patient">
-                      <p class="patient--color-black">Femur fracture <br /> age 13</p>
+                      <p class="patient--color-black">
+                        Femur fracture <br /> age 13
+                      </p>
                     </div>
                   </div>
                 </PinchToZoom>
@@ -478,9 +481,12 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                       />
                     </picture>
                     <div class="patient">
-                      <p class="patient--delay-color">Delayed eruption of permanent teeth</p>
+                      <p class="patient--delay-color">
+                        Delayed eruption of permanent teeth
+                      </p>
                       <small
-                        >Reproduced with permission from Kiselnikova L, et al. Clin Case Rep. 2020;8(5):911-918.</small
+                        >Reproduced with permission from Kiselnikova L, et al.
+                        Clin Case Rep. 2020;8(5):911-918.</small
                       >
                     </div>
                   </div>
